# uatf

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  FAQ.md  README.md  config.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test_first.py
sandbox/controls/: ControlSearchPanel.py
sandbox/pages/: auth_panel.py  basket_page.py  catalog_page.py  main_page.py  product_card.py  product_card_mini.py
sandbox/smoke/: show-config.ini  test_main_page.py
sandbox/test-auth/mk/test_auth/: test_auth_google.py  test_auth_yandex.py
sandbox/test-auth/mk/test_auth/config/: show-config.ini
sandbox/test-auth/mk/test_auth/controls/: ControlBreadcrumbs.py  ControlFilterPanel.py  ControlSearch.py  ControlsCatalogGrid.py  __init__.py
sandbox/test-auth/mk/test_auth/pages/: auth_panel.py  basket_page.py  main_page.py  (+1 more)
sandbox/test-main/smoke/test-basket/: start_tests.py  test_main_page.py  test_main_page_01.py  test_main_page_02.py
test/: test_first.py
test/BigGeek/: test_01.py  test_first.py
test/BigGeek/pages/: BigGeek.py
test/pages/: yandex.py
test_big_geek/BigGeek/: test_01.py  test_first.py
test_big_geek/BigGeek/pages/: discounds.py
test_framework/: test_aasert.py  test_browser.py
test_framework/for_download_dir/: test_download_dir.py
test_framework/for_restart_mode/: pytest.ini  test_for_test_restart_mode.py
uatf/: __init__.py  assert_that.py  browser.py  case.py  case_ui.py  config.py  exceptions.py  helper.py  logfactory.py  plugin.py  requirements.txt  run.py  screen_capture.py  subtests.py
uatf/cache/: __init__.py  db_model.py
uatf/pytest_core/: decorators.py  plugin.py  subtests.py
uatf/pytest_core/base/: base_case_ui.py  case.py  case_ui.py
uatf/pytest_core/fixtures/: layout.py
uatf/report/: bd_model.py  db_base.py  db_model.py  db_model_layout.py  report_base.py  report_layout.py  report_ui.py  style_ui.css  template_ui.html
uatf/report/db/: db_model_layout.py  db_model_ui.py
uatf/report/templates/: style_ui.css  template_ui.html
uatf/report/templates/report_layout/: template_layout.html
uatf/report/templates/report_ui/: converter.py  report.template  template_ui.html
uatf/ui/: __init__.py  actions_chains.py  asserts_matchers_ui.py  browser.py  helper.py  region.py  run_browser.py  screen_capture.py  should_be.py
uatf/ui/elements/: __init__.py  base_control.py  base_element.py  button.py  control.py  custom_list.py  element.py  element_list.py  link.py  text.py  text_field.py
uatf/ui/layout/: antialiasing.py  color_lab.py  color_yiq.py  html.py  main.py  reporter.py
uatf/ui/layout/css/: report.css
(+13 files in other folders)
