[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = uatf
version = attr: uatf.__version__
author = Gayazov Artur
author_email = a.gayazov1999@icloud.com
description = "Universal Autotest Framework"

[options]
zip_safe=false
;include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    pytest==7.3.1
    requests==2.28.2
    attrs==23.1.0

;[options.package_data]
;* =
;    report/*.js
;    report/templates/*.template
;    ui/consola.ttf
;    ui/start_frame.jpg
;    ui/layout/css/*.css
;    ui/layout/css/*.js

[options.extras_require]
web =
    selenium==4.10.0
    pillow==9.5.0
    opencv-python>=4.7.0.72
test =
    beautifulsoup4>=4.12.2
    mypy>=1.2.0
    flake8>=6.1.0
    types-pillow>=9.5.0.1
mobile =
    selenium==4.10.0
    Appium-Python-Client>=2.7.1
    opencv-python>=4.7.0.72
    pillow==9.5.0

[options.entry_points]
pytest11 =
    subtests = uatf.pytest_core.fixtures.subtests
;    layout = uatf.pytest_core.fixtures.layout
    pytest_tensor = uatf.pytest_core.plugin
console_scripts =
    run_tests = uatf.run:main

[flake8]
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    renderjson.py,
    reporter_html.py,
    grabdot.py,
    util,
    tests,
    .mypy_cache,
    __init__.py,
    build,

ignore=E501,W292,E226,W293,W291,W504,E741,W605,E126